--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/e24716021f.js" crossorigin="anonymous"></script>
-  
+
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -43,10 +43,51 @@
       <div class="col">
         <img
           src="https://res.cloudinary.com/millermayhem/image/upload/v1666985796/Qappz/LOGO_CIRCLE_WHITE_NO_BORDER_WATERMARK_sdeaef.png"
-          class="index-logo" alt="">
+          class="index-logo" id="header" alt="">
+      </div>
+    </div>
+
+    <div class="row overlay">
+      <div class="col-lg-6 col-sm-12" style="padding-left: 100px; padding-top: 300px">
+        <h1>QAPPZ</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque reiciendis ab repudiandae quia similique vero, quo inventore. Similique, illo. Aliquam odit molestiae quas quasi animi enim est facere culpa inventore!</p>
+      </div>
+      <div class="col qappz">
       </div>
     </div>
   </div>
+
+
+    <!--script for logo fade-->
+    <script>
+      var header = document.getElementById('header');
+
+      function fadeOutOnScroll(element) {
+        if (!element) {
+          return;
+        }
+
+        var distanceToTop = window.pageYOffset + element.getBoundingClientRect().top;
+        var elementHeight = element.offsetHeight;
+        var scrollTop = document.documentElement.scrollTop;
+
+        var opacity = 1;
+
+        if (scrollTop > distanceToTop) {
+          opacity = 1 - (scrollTop - distanceToTop) / elementHeight;
+        }
+
+        if (opacity >= 0) {
+          element.style.opacity = opacity;
+        }
+      }
+
+      function scrollHandler() {
+        fadeOutOnScroll(header);
+      }
+
+      window.addEventListener('scroll', scrollHandler);
+    </script>
 
 </body>
 
